[package]
name = "pingme"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
tui-textarea = { version = "0.4", features = ["ratatui"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
async-trait = "0.1.77"